# snapdrop

./: .gitignore  Anchor.toml  CNAME  DEPLOY.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  cache.json  check_size.ts  check_spl.ts  config.json  eslint.config.mjs  get_mint.ts  icon  index.html  index.txt  loaded_idl.json  next.config.ts  package-lock.json  package.json  test_correct_flow.ts  test_e_plays.ts  test_full_ui_path.ts  test_get_mint_len2.ts  test_mint.ts  test_mint_2022.ts  test_mint_again.ts  test_mint_extensions.ts  test_mint_extensions2.ts  test_mint_extensions3.ts  test_mint_extensions4.ts  test_mint_len.ts  test_overfund.ts  test_parse_theory.ts  test_space.ts  (+10 more)
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
assets/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+60 more)
programs/street_sync/: Cargo.toml  program-id.json
programs/street_sync/src/: lib.rs
scripts/: check_ata.ts  create_shared_metadata.ts  deploy_infinite.ts  deploy_random.ts  enable_mint_limit.ts  generate_assets_for_sugar.ts  inspect_cm_2.ts  inspect_workflow_ids.ts  test_rpc.ts
source_assets/: 0.json  (+3 more)
(+201 files in other folders)
